--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Compiled class file
+**/target
 *.class
 
 # Log file
@@ -10,7 +11,10 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# IDE files
+*.iml
+
+# Package Files
 *.jar
 *.war
 *.ear
@@ -20,3 +24,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# maven wrapper
+mvnw
+maven-wrapper.properties
