--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,8 +23,6 @@
     </description>
 
     <properties>
-        <final.name>${project.name}-${project.version}</final.name>
-
         <!-- compiler, maven plugins and extensions-->
         <java.version>1.8</java.version>
         <kotlin.version>1.2.10</kotlin.version>
@@ -37,7 +35,7 @@
 
         <!-- dependency versions-->
         <com.amazonaws.aws-sdk.version>1.11.220</com.amazonaws.aws-sdk.version>
-        <com.fasterxml.jackson.module.jackson-module-kotlin.version>2.9.4</com.fasterxml.jackson.module.jackson-module-kotlin.version>
+        <com.fasterxml.jackson.module.jackson-module-kotlin.version>2.9.5</com.fasterxml.jackson.module.jackson-module-kotlin.version>
         <com.google.guava.version>23.2-jre</com.google.guava.version>
         <com.nhaarman.mockito-kotlin.version>1.5.0</com.nhaarman.mockito-kotlin.version>
         <commons-net.commons-net.version>3.6</commons-net.commons-net.version>
@@ -83,6 +81,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>default</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>runtime-cli</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -139,7 +142,12 @@
     </dependencyManagement>
 
     <build>
-        <finalName>${final.name}</finalName>
+        <!-- as of Apr.2018
+             adding the property finalName will break the runtime-gae-standard with the following message
+             [ERROR] Failed to execute goal com.google.cloud.tools:appengine-maven-plugin:1.3.1:run (default-cli)
+             on project runtime-gae-standard: Dev App Server does not support App Engine Flexible Environment applications.
+             <finalName>${project.name}-${project.version}</finalName>
+        -->
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
