Add Integration Test for PingController

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <modules>
         <module>default</module>
+        <module>integrationtests</module>
         <module>parent</module>
         <module>runtime-cli</module>
         <module>runtime-gae-standard</module>
