--- a/integrationtests/pom.xml
+++ b/integrationtests/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>application-id</artifactId>
         <groupId>customer-name</groupId>
         <version>1</version>
+        <relativePath>../parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
