--- a/integrationtests/pom.xml
+++ b/integrationtests/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>application-id</artifactId>
         <groupId>customer-name</groupId>
-        <version>1</version>
+        <artifactId>application-parent</artifactId>
+        <version>0.1</version>
         <relativePath>../parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
