--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,64 @@
         <finalName>${project.parent.name}-${project.parent.version}</finalName>
         <defaultGoal>clean verify</defaultGoal>
         <plugins>
+            <!-- rewrite run scripts with correct application jar name -->
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <executions>
+                    <execution>
+                        <id>replace-for-documentation</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <preserveDir>true</preserveDir>
+                            <basedir>${basedir}/src/bin</basedir>
+                            <outputBasedir>${project.build.directory}</outputBasedir>
+                            <outputDir>bin</outputDir>
+                            <ignoreErrors>true</ignoreErrors>
+                            <regex>false</regex>
+                            <delimiters>
+                                <delimiter>@</delimiter>
+                            </delimiters>
+                            <filesToInclude>
+                                *.*
+                            </filesToInclude>
+                            <replacements>
+                                <replacement>
+                                    <token>finalName</token>
+                                    <value>${project.parent.name}-${project.parent.version}</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- assemble the dist zip file -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <finalName>${project.parent.name}-${project.parent.version}</finalName>
+                    <descriptors>
+                        <descriptor>src/assembly/cli-assembly.xml</descriptor>
+                    </descriptors>
+                    <outputDirectory>target</outputDirectory>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- upload the generated zip to the customer ftp -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
