Add master branch pipeline configuration

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,9 +5,23 @@
 image: maven:3.3.9
 
 pipelines:
+  # default behaviour for all branches and all tags
   default:
     - step:
         caches:
           - maven
         script:
-          - mvn -B verify # -B batch mode makes Maven less verbose
+          # -B batch mode makes Maven less verbose
+          - mvn -B clean verify
+  branches:
+    # master uses wagon to publishes to the 'launcher-ftp-distribution-server'
+    master:
+      - step:
+          caches:
+            - maven
+          script:
+            - mkdir target
+            # Create a custom settings xml which pulls the FTP Username and Password from the environment variable
+            - echo "<settings><localRepository>~/.m2/repository</localRepository><servers><server><id>launcher-ftp-distribution-server</id><username>$FTP_USER</username><password>$FTP_PASS</password></server></servers></settings>" > target/settings.xml
+            # -B batch mode makes Maven less verbose
+            - mvn -B -s target/settings.xml clean verify wagon:upload-single
