Corrections from Rainer and DockerFile

--- a/runtime-gae-standard/src/main/resources/application.properties
+++ b/runtime-gae-standard/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
+spring.datasource.url=jdbc:postgresql:///192.168.99.100:5432/dev
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
