--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
 
   database:
     image: postgres:9.6.3-alpine
+    hostname: 192.168.99.100
     ports:
       - '5432:5432'
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    volumes:
-      - ./setup-db.sql:/docker-entrypoint-initdb.d/setup-db.sql:ro
+    #volumes:
+      #- ./setup-db.sql:/docker-entrypoint-initdb.d/setup-db.sql:ro
