#11 Fix build Problems and refactor modules
* Update dependencies
  * Update Spring Boot to 2.1.0.BUILD-SNAPSHOT
  * Change Jackson config from non standard to to JS Standard
* Fix incompatibilities with new version
  * Jackson Mapping
  * CliEntryPoint
* Add contribution guidelines

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
+sudo: required
+
 # This is a sample build configuration for TravisCI
 language: java
+
+services:
+  - docker
 
 # -B batch mode makes Maven less verbose
 script: mvn -B clean verify
