--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -10,16 +10,31 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>integrationtests</artifactId>
+    <artifactId>integration-tests</artifactId>
 
     <dependencies>
         <!-- dependency on the production code-->
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>runtime-cli</artifactId>
-            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.javamoney</groupId>
+            <artifactId>moneta</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -28,7 +43,6 @@
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-mockmvc</artifactId>
-            <version>2.0.1.RELEASE</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -39,7 +53,6 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.3</version>
                 <executions>
                     <execution>
                         <id>generate-docs</id>
