--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>2.1.0.BUILD-SNAPSHOT</version>
         <relativePath/>
     </parent>
     <packaging>pom</packaging>
@@ -15,52 +15,27 @@
     <name>CustomApplicationName</name>
     <version>0.1</version>
 
-    <description>
-        The Systemkern Parent POM provides a prepackaged opinionated default set of technologies
-        which are frequently used in Systemkern applications.
-        It Builds upon the open source Spring Boot Starter parent.
-
-        Per Default Java 1.8 and Kotlin are used.
-    </description>
-
     <properties>
         <!-- compiler, maven plugins and extensions-->
         <java.version>1.8</java.version>
-        <kotlin.version>1.2.31</kotlin.version>
-        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
         <org.apache.maven.wagon.wagon-ftp.version>1.0-beta-6</org.apache.maven.wagon.wagon-ftp.version>
 
         <!-- dependency versions-->
-        <com.amazonaws.aws-sdk.version>1.11.220</com.amazonaws.aws-sdk.version>
-        <com.fasterxml.jackson.module.jackson-module-kotlin.version>2.9.5</com.fasterxml.jackson.module.jackson-module-kotlin.version>
-        <com.google.guava.version>23.2-jre</com.google.guava.version>
         <com.nhaarman.mockito-kotlin.version>1.5.0</com.nhaarman.mockito-kotlin.version>
-        <commons-net.commons-net.version>3.6</commons-net.commons-net.version>
         <org.javamoney.moneta.version>1.1</org.javamoney.moneta.version>
-        <org.redisson.version>3.5.4</org.redisson.version>
         <org.zalando.jackson-datatype-money.version>1.0.0-RC2</org.zalando.jackson-datatype-money.version>
-        <org.postgres.postgressql.version>42.2.2</org.postgres.postgressql.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>${org.postgres.postgressql.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
 
         <!-- testing dependencies -->
@@ -87,7 +62,7 @@
         -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>default</artifactId>
+                <artifactId>core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -96,31 +71,12 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>user-profile</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
-
-        <!-- external dependencies -->
-            <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-ses</artifactId>
-                <version>${com.amazonaws.aws-sdk.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.fasterxml.jackson.module</groupId>
-                <artifactId>jackson-module-kotlin</artifactId>
-                <version>${com.fasterxml.jackson.module.jackson-module-kotlin.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${com.google.guava.version}</version>
-            </dependency>
-
+            <!-- external dependencies -->
             <dependency>
                 <groupId>com.nhaarman</groupId>
                 <artifactId>mockito-kotlin</artifactId>
@@ -137,12 +93,6 @@
                 <groupId>org.javamoney</groupId>
                 <artifactId>moneta</artifactId>
                 <version>${org.javamoney.moneta.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.redisson</groupId>
-                <artifactId>redisson</artifactId>
-                <version>${org.redisson.version}</version>
             </dependency>
 
             <dependency>
@@ -167,42 +117,6 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
-                <configuration>
-                    <compilerPlugins>
-                        <plugin>jpa</plugin>
-                        <plugin>spring</plugin>
-                    </compilerPlugins>
-                    <jvmTarget>1.8</jvmTarget>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-allopen</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-noarg</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
             <!-- Failsafe plugin for Integration Tests -->
