--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
     </description>
 
     <modules>
-        <module>default</module>
-        <module>integrationtests</module>
+        <module>core</module>
         <module>parent</module>
+        <module>integration-tests</module>
         <module>runtime-cli</module>
         <module>runtime-gae-standard</module>
         <module>user-profile</module>
@@ -74,7 +74,6 @@
             <!-- assemble the dist zip file -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
                 <configuration>
                     <finalName>${project.parent.name}-${project.parent.version}</finalName>
                     <descriptors>
