--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -30,16 +30,10 @@
         -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>default</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>user-profile</artifactId>
-        </dependency>
-
-        <!-- External dependencies
-        -->
+        <!-- External dependencies-->
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
@@ -51,6 +45,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
     </dependencies>
 
