--- a/runtime-gae-standard/src/main/resources/application.properties
+++ b/runtime-gae-standard/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql:///192.168.99.100:5432/dev
+spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
