--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -3,14 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>customer-name</groupId>
-        <artifactId>application-parent</artifactId>
+        <groupId>com.systemkern</groupId>
+        <artifactId>launcher-parent</artifactId>
         <version>0.1</version>
         <relativePath>../parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>integration-tests</artifactId>
+
+    <properties>
+        <org.springframework.restdocs.spring-restdocs-asciidoctor.version>1.2.2.RELEASE</org.springframework.restdocs.spring-restdocs-asciidoctor.version>
+    </properties>
+
 
     <dependencies>
         <!-- dependency on the production code-->
@@ -67,7 +72,7 @@
                                 <!-- see readme.adoc -->
                                 <project-name>${project.parent.name}</project-name>
                                 <project-version>${project.version}</project-version>
-                                <final-name>${project.parent.name}-${project.parent.version}</final-name>
+                                <final-name>${project.parent.build.finalName}</final-name>
                             </attributes>
                         </configuration>
                     </execution>
@@ -76,7 +81,7 @@
                     <dependency>
                         <groupId>org.springframework.restdocs</groupId>
                         <artifactId>spring-restdocs-asciidoctor</artifactId>
-                        <version>1.2.2.RELEASE</version>
+                        <version>${org.springframework.restdocs.spring-restdocs-asciidoctor.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
