--- a/runtime-cli/pom.xml
+++ b/runtime-cli/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>application-parent</artifactId>
-        <groupId>customer-name</groupId>
+        <groupId>com.systemkern</groupId>
+        <artifactId>launcher-parent</artifactId>
         <version>0.1</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
@@ -24,13 +24,16 @@
         <start.class>systemkern.CliEntryPointKt</start.class>
     </properties>
 
-
     <dependencies>
         <!-- Project Internal dependencies
         -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>user-profile</artifactId>
         </dependency>
 
         <!-- External dependencies-->
