--- a/runtime-gae-standard/pom.xml
+++ b/runtime-gae-standard/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>customer-name</groupId>
-        <artifactId>application-parent</artifactId>
+        <groupId>com.systemkern</groupId>
+        <artifactId>launcher-parent</artifactId>
         <version>0.1</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
@@ -13,22 +13,23 @@
 
     <artifactId>runtime-gae-standard</artifactId>
 
-    <properties>
-        <com.google.appengine-api-1.0-sdk.version>1.9.63</com.google.appengine-api-1.0-sdk.version>
-        <java.servlet-api.version>3.1.0</java.servlet-api.version>
-    </properties>
-
     <dependencies>
-        <!-- project internal dependencies
-        -->
+        <!-- project internal dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>runtime-cli</artifactId>
             <version>${project.version}</version>
         </dependency>
 
-        <!-- external dependencies
-        -->
+        <!-- external dependencies -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -37,25 +38,20 @@
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-api-1.0-sdk</artifactId>
-            <version>${com.google.appengine-api-1.0-sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${java.servlet-api.version}</version>
-        </dependency>
     </dependencies>
 
     <build>
+        <!-- as of may.2018
+             inheriting the final name from the launcher-parent.pom will break the runtime-gae-standard with the following exception
+             [ERROR] Failed to execute goal com.google.cloud.tools:appengine-maven-plugin:1.3.1:run (default-cli)
+             on project runtime-gae-standard: Dev App Server does not support App Engine Flexible Environment applications.
+        -->
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <outputDirectory>target/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
                 <configuration>
                     <archiveClasses>true</archiveClasses>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -66,9 +62,6 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
-                <version>1.3.1</version>
-                <configuration>
-                </configuration>
             </plugin>
         </plugins>
     </build>
