#6 Add proper test data to integratio Tests
* Change Customer Id to UUID
* Add User Test Data Creator

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -29,6 +29,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>user-profile</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.hsqldb</groupId>
