#2 Improve naming of configuration

--- a/integration-tests/src/test/resources/application-integration-test.yml
+++ b/integration-tests/src/test/resources/application-integration-test.yml
@@ -8,4 +8,4 @@
 ##############################################################################
 
 user-profile:
-  bcrypt-encode-rounds: 20
+    bcrypt-encryption-rounds: 5
