#2 Delay deleted,login working almost full,athentication to read and update is lacking

--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.application.name=Launcher
 # Tomcat Server configuration
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
