--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.1.0.BUILD-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.3.BUILD-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
