--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>runtime-cli</artifactId>
-            <exclusions>
+           <!-- <exclusions>
                 <exclusion>
                     <groupId>org.postgresql</groupId>
                     <artifactId>postgresql</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
@@ -55,6 +55,10 @@
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-mockmvc</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
     </dependencies>
 
