--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -56,6 +56,11 @@
             <scope>test</scope>
 
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-core</artifactId>
+            <version>5.0.0.M5</version>
+        </dependency>
     </dependencies>
 
 </project>
