#2 Data base HSQL

--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -15,15 +15,21 @@ spring.application.name=Launcher
 # Tomcat Server configuration
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=public
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.default_schema=public
+
+# Database Configuration
+spring.datasource.url=jdbc:hsqldb:mem:dataSource
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
