#2 Added corrections of formatting from Rainer and Codacy

--- a/integration-tests/src/test/resources/application-integration-test.yml
+++ b/integration-tests/src/test/resources/application-integration-test.yml
@@ -6,3 +6,5 @@
 # It is activated by the class annotation @ActiveProfiles("integrationtest")
 #
 ##############################################################################
+user-profile:
+  bcrypt-encode-rounds: 10
