--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -46,8 +46,8 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>3.0.4.RELEASE</version>
+
         </dependency>
-    </dependencies>
+    </dependencies><version>3.0.4.RELEASE</version>
 
 </project>
