Corrected an error in user-profile pom

--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -48,6 +48,6 @@
             <artifactId>spring-security-web</artifactId>
 
         </dependency>
-    </dependencies><version>3.0.4.RELEASE</version>
+    </dependencies>
 
 </project>
