--- a/user-profile/pom.xml
+++ b/user-profile/pom.xml
@@ -49,14 +49,9 @@
 
         </dependency>
         <dependency>
-            <groupId>org.cloudfoundry</groupId>
-            <artifactId>cloudfoundry-client</artifactId>
-            <version>3.10.0.BUILD-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-core</artifactId>
-            <version>5.1.0.BUILD-SNAPSHOT</version>
+            <version>${spring-integration-core}</version>
         </dependency>
     </dependencies>
 
