Add testing dependencies

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -70,6 +70,13 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>core</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>${project.parent.groupId}</groupId>
                 <artifactId>runtime-cli</artifactId>
                 <version>${project.version}</version>
