--- a/runtime-cli/src/main/resources/application.properties
+++ b/runtime-cli/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.application.name=Launcher
 # Tomcat Server configuration
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://192.168.99.100:32768/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
@@ -23,9 +23,9 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Email configurations
-spring.mail.host=192.168.99.100
+spring.mail.host=localhost
 spring.mail.port=1025
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=user
+spring.mail.password=123
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
